--- a/style.css
+++ b/style.css
@@ -19,8 +19,16 @@ body {
 
 }
 .grid{
-    border-top: 1px solid black;
-    border-left: 1px solid black;
+
     width: 100%;
     height: 100%;
+}
+
+.border{
+    border-top: 1px solid black;
+    border-left: 1px solid black;
+}
+
+.draw{
+    background: black;
 }
