--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; */
 
 }
 
